--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,36 @@
     android:layout_height="match_parent"
     tools:context="com.mystudydemo.MainActivity">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:background="@color/colorPrimary">
+    <!--<FrameLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:background="@color/colorPrimary">-->
 
-        <com.mystudydemo.MaterialEditText
-            android:id="@+id/testview"
+    <!--<com.mystudydemo.MaterialEditText-->
+    <!--android:id="@+id/testview"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:hint="PassWord"-->
+    <!--app:float_textcolor="@color/colorAccent" />-->
+    <!--</FrameLayout>-->
+    <com.mystudydemo.TagLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:orientation="vertical">
+
+        <TextView
+            android:text="assdad"
+            android:id="@+id/aaa"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="PassWord"
-            app:float_textcolor="@color/colorAccent" />
-    </FrameLayout>
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary" />
+
+        <View
+            android:id="@+id/aaa1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@color/colorPrimaryDark" />
+    </com.mystudydemo.TagLayout>
 </RelativeLayout>
